@@ -18,7 +18,7 @@ public class Kata1 {
     public static List<Map> execute() {
         List<Movie> movies = DataUtil.getMovies();
 
-        return movies.stream().map(m -> ImmutableMap.of("id", m.getId(), "tittle", m.getTitle()))
+        return movies.stream().map(m -> Map.of("id", m.getId(), "tittle", m.getTitle()))
                 .collect(Collectors.toList());
     }
 }
